# zikpro_erpnext_uk_vat

./: README.md  pyproject.toml
zikpro_erpnext_uk_vat/: __init__.py  api.py  auth.py  hooks.py  install.py  modules.txt  patches.txt  setup.py  utils.py
zikpro_erpnext_uk_vat/patches/v1_0/: add_eu_vat_fields.py  add_last_2fa_field.py
zikpro_erpnext_uk_vat/public/js/: hmrc_fraud_prevention.js
zikpro_erpnext_uk_vat/zikpro_erpnext_uk_vat/doctype/uk_mtd_vat_liability/: test_uk_mtd_vat_liability.py  uk_mtd_vat_liability.js  uk_mtd_vat_liability.json  uk_mtd_vat_liability.py  uk_mtd_vat_liability_list.js
zikpro_erpnext_uk_vat/zikpro_erpnext_uk_vat/doctype/uk_mtd_vat_payment/: test_uk_mtd_vat_payment.py  uk_mtd_vat_payment.js  uk_mtd_vat_payment.json  uk_mtd_vat_payment.py  uk_mtd_vat_payment_list.js
zikpro_erpnext_uk_vat/zikpro_erpnext_uk_vat/doctype/uk_mtd_vat_return/: test_uk_mtd_vat_return.py  uk_mtd_vat_return.js  uk_mtd_vat_return.json  uk_mtd_vat_return.py  uk_mtd_vat_return_list.js
zikpro_erpnext_uk_vat/zikpro_erpnext_uk_vat/doctype/user_mfa_timestamp/: test_user_mfa_timestamp.py  user_mfa_timestamp.js  user_mfa_timestamp.json  user_mfa_timestamp.py
zikpro_erpnext_uk_vat/zikpro_erpnext_uk_vat/doctype/vat_settings/: test_vat_settings.py  vat_settings.js  vat_settings.json  vat_settings.py
zikpro_erpnext_uk_vat/zikpro_erpnext_uk_vat/report/vat_return/: vat_return.js  vat_return.json  vat_return.py
