[project]
name = "zikpro_erpnext_uk_vat"
authors = [
    { name = "Zikpro", email = "info@zikpro.com"}
]
description = "Uk VAT Compliance"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0-dev,<17.0.0"